--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -97,3 +97,14 @@
     @apply rounded bg-primary;
   }
 }
+
+
+
+@layer base {
+  * {
+    @apply border-border outline-ring/50;
+  }
+  body {
+    @apply bg-background text-foreground;
+  }
+}
