--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -5,13 +5,13 @@
 @layer base {
   :root {
     --background: 0 0% 100%;
-    --foreground: 240 10% 3.9%;
+    --foreground: 220 5% 12%;
     --card: 0 0% 100%;
-    --card-foreground: 240 10% 3.9%;
+    --card-foreground: 220 5% 12%;
     --popover: 0 0% 100%;
-    --popover-foreground: 240 10% 3.9%;
+    --popover-foreground: 220 5% 12%;
     --primary: 240 5.9% 10%;
-    --primary-foreground: 0 0% 98%;
+    --primary-foreground: 40 20% 97%;
     --secondary: 240 4.8% 95.9%;
     --secondary-foreground: 240 5.9% 10%;
     --muted: 240 4.8% 95.9%;
@@ -19,7 +19,7 @@
     --accent: 240 4.8% 95.9%;
     --accent-foreground: 240 5.9% 10%;
     --destructive: 0 84.2% 60.2%;
-    --destructive-foreground: 0 0% 98%;
+    --destructive-foreground: 40 20% 97%;
     --border: 240 5.9% 90%;
     --input: 240 5.9% 90%;
     --ring: 240 5.9% 10%;
@@ -41,24 +41,24 @@
   }
 
   .dark {
-    --background: 240 10% 3.9%;
-    --foreground: 0 0% 98%;
-    --card: 240 10% 3.9%;
-    --card-foreground: 0 0% 98%;
-    --popover: 240 10% 3.9%;
-    --popover-foreground: 0 0% 98%;
-    --primary: 0 0% 98%;
+    --background: 220 5% 12%;
+    --foreground: 40 20% 97%;
+    --card: 220 5% 12%;
+    --card-foreground: 40 20% 97%;
+    --popover: 220 5% 12%;
+    --popover-foreground: 40 20% 97%;
+    --primary: 40 20% 97%;
     --primary-foreground: 240 5.9% 10%;
-    --secondary: 240 3.7% 15.9%;
-    --secondary-foreground: 0 0% 98%;
-    --muted: 240 3.7% 15.9%;
+    --secondary: 210 4% 20%;
+    --secondary-foreground: 40 20% 97%;
+    --muted: 210 4% 20%;
     --muted-foreground: 240 5% 64.9%;
-    --accent: 240 3.7% 15.9%;
-    --accent-foreground: 0 0% 98%;
+    --accent: 210 4% 20%;
+    --accent-foreground: 40 20% 97%;
     --destructive: 0 62.8% 30.6%;
-    --destructive-foreground: 0 0% 98%;
-    --border: 240 3.7% 15.9%;
-    --input: 240 3.7% 15.9%;
+    --destructive-foreground: 40 20% 97%;
+    --border: 225 2% 34%;
+    --input: 210 4% 20%;
     --ring: 240 4.9% 83.9%;
     --chart-1: 220 70% 50%;
     --chart-2: 160 60% 45%;
@@ -77,12 +77,20 @@
     @apply scroll-auto;
   }
 
+  img {
+    @apply !select-none;
+  }
+
   body {
     @apply bg-background text-foreground;
   }
 
+  .prose code:not(pre code) {
+    @apply rounded-md bg-muted px-1 py-0.5 text-sm font-medium before:[content:''] after:[content:''];
+  }
+
   .prose pre {
-    @apply bg-background !p-0;
+    @apply !p-0;
   }
 
   .prose .hljs::-webkit-scrollbar-thumb,
